0.17.0
	new feature: file attachments (by Aaron)
	new feature: IPv4 tree expand/collapse switch
	new feature: IPV4_TREE_SHOW_USAGE option controls IPv4 performance
	new feature: ability to delete objects (by Aaron)
	new feature: external "httpd" user authentication
	new feature: validator in RackCode editor
	new feature: vendor sieve for stickers
	update: display row name when listing objects. closes ticket 16 (by Aaron)
	update: ability to manage rows from the Rackspace page in addition to the Dictionary (by Aaron)
	update: IPv4 calculations were optimized for better speed
	update: allow port type to be changed if it isn't linked.  closes ticket 137 (by Aaron)
	update: add network security chapter and dictionary entries.  closes ticket 148 (by Aaron)
	update: add HP and Juniper dictionary entries.  closes tickets 145 and 165 (by Aaron)
	update: combined two forms on object properties page into one.  closes tickets 36 and 87 (by Aaron)
	update: resolved performance issue for systems with many L2 ports
	update: enable username handling in Cisco switch connector
	update: introduce icons for routers and SLB
	update: display and edit the dictionary chapter by chapter (ticket:151)
	update: 'enabled' user acount flag was dropped
	update: switchvlans gateway has been changed
	update: RackTables installation is now done only through install.php
	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
	bugfix: show error message for duplicate IPv4 network record
	bugfix: it was possible to access the system as any existing
		LDAP user w/o his password (reported by Igor Shishkin)
0.16.4 2008-11-04
	bugfix: display VS/RS config block in RS pool view
	bugfix: resolve tabindex issues in many forms
	bugfix: NAT rules were not displayed for IP address
	bugfix: less PHP warnings
	update: enable user search by real name
	update: allow empty names for IPv4 networks
	update: refactor snmp.php to support Cisco 3032, 3750, 4506 switches