@@ -125,7 +125,7 @@ $tab['object']['nat4'] = 'NATv4';
 $tab['object']['livevlans'] = 'Live VLANs';
 $tab['object']['snmpportfinder'] = 'SNMP port finder';
 $tab['object']['editrspvs'] = 'RS pools';
-$tab['object']['lvsconfig'] = 'LVS config';
+$tab['object']['lvsconfig'] = 'keepalived.conf';
 $tab['object']['autoports'] = 'AutoPorts';
 $tab['object']['tags'] = 'Tags';
 $tab['object']['files'] = 'Files';
@@ -148,8 +148,8 @@ $trigger['object']['ipv4'] = 'trigger_ipv4';
 $trigger['object']['nat4'] = 'trigger_natv4';
 $trigger['object']['livevlans'] = 'trigger_livevlans';
 $trigger['object']['snmpportfinder'] = 'trigger_snmpportfinder';
-$trigger['object']['editrspvs'] = 'trigger_natv4';
-$trigger['object']['lvsconfig'] = 'trigger_lvsconfig';
+$trigger['object']['editrspvs'] = 'trigger_isloadbalancer';
+$trigger['object']['lvsconfig'] = 'trigger_isloadbalancer';
 $trigger['object']['autoports'] = 'trigger_autoports';
 $trigger['object']['tags'] = 'trigger_tags';
 $ophandler['object']['rackspace']['updateObjectAllocation'] = 'updateObjectAllocation';
